# SGTD

./: .gitignore  LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/sgtd/: CMakeLists.txt  package.xml
src/sgtd/Log/: mat_pre.txt
src/sgtd/config/: SG_localization.yaml  json.yaml  json_wild.yaml
src/sgtd/include/: Semantic_Graph.hpp  cluster_manager.hpp  common_lib.h  linear_sum_assignment.hpp  ssc.h  utility.hpp
src/sgtd/include/desc/: STDesc.h
src/sgtd/include/fast_gicp/gicp/: lsq_registration.hpp
src/sgtd/include/fast_gicp/gicp/experimental/: fast_gicp_mp_impl.hpp
src/sgtd/include/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  lsq_registration_impl.hpp
src/sgtd/launch/: create_semantic_graph.launch  create_semantic_graph_wild.launch  gdb_debug_example.launch  local_map.launch  semantic_graph_localization.launch
src/sgtd/rviz_cfg/: loam_livox.rviz
src/sgtd/src/: Kitti_clutering.cpp  STDesc.cpp  get_json.cpp  get_json_wild.cpp  local_map.cpp  readme.txt  semantic_graph_localization.cpp  ssc.cpp
